--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Releasy - Make your release cycles shorter and easier</title>
+    <title>Releasy - Make your releases relatively easier</title>
     <meta name="description" content="An app that helps you visualize and plan your release cycles" property="description">
     <meta name="keywords" content="release, fast, easy, effortless, task, tracker, notifications" property="keywords">
     <meta name="viewport" content="width=device-width, initial-scale=1" property="viewport">
