--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
               <div class="container-fluid rel">
                 <div class="row">
                   <div class="user-signup__intro">
-                    <h1 style="text-align: center;">One stop solution to all your release tracking problems</h1>
+                    <h2 style="text-align: center;">One stop solution to all your release tracking problems</h2>
                     <p style="text-align: center;">
                       <img src="/res/spacer.png" alt="" class="spacer insert--image wrap-off-align-center"><br>
                     </p>
                     <p style="text-align: center;">Would you like exclusive free one year access to our upcoming product?</p>
                     <p style="text-align: center;">
                       <img src="/res/clean-hr.png" alt="" class="clean-hr insert--image wrap-off-align-center">
-                      <span style="font-size: 14px;">Enter your email address if you don't want to do it yourself:</span>
+                      <span style="font-size: 14px;">Signup!</span>
                     </p>
                   </div>
                 </div>
